@@ -1,3 +1,10 @@
+Thu Mar  9 15:52:14 MST 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/conversation-panel.c:
+	* src/fe-gnome/xtext.c:
+	* src/fe-gnome/main-window.c:
+	  - Use the proper clipboards
+
 Wed Mar  8 20:44:50 MST 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* data/irc-network-editor.glade:
